<resources>
    <string name="app_name">FinalExam</string>
    <string name="problem_1">Problem 1</string>
    <string name="pow">POW</string>
    <string name="no_result">No Result</string>
    <string name="value_to_subtract">Value to Subtract</string>
    <string name="subtract">SUBTRACT</string>
    <string name="equals">=</string>
    <string name="problem_2">Problem 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_something_here">type something here</string>
    <string name="send_below">send below</string>
    <string name="no_response_received">No Response Received</string>
    <string name="no_message_received">No Message Received</string>
    <string name="reverse">reverse</string>
    <string name="lower">lower</string>
    <string name="upper">upper</string>
    <string name="download">DOWNLOAD</string>
    <string name="problem_3a">Problem 3A</string>
    <string name="problem_3b">Problem 3B</string>
    <string name="problem_4">Problem 4</string>
</resources>
