<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF0"
    tools:context="mobappdev.demo.finalexam.problem2.ProblemTwoTopFragment">

    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:gravity="center"
        android:hint="@string/type_something_here"/>

    <Button
        android:id="@+id/b_send_below"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_input"
        android:text="@string/send_below"
        />

    <TextView
        android:id="@+id/tv_response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/b_send_below"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/no_response_received"/>

</RelativeLayout>
