<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".problem1.ProblemOneSecondActivity">

    <LinearLayout
        android:id="@+id/ll_equation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/tv_op1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            tools:hint="10"/>

        <TextView
            android:id="@+id/tv_op2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"
            tools:hint="22"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="60sp"
            android:text="@string/equals"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_equation"
        android:textSize="14sp"
        android:gravity="center"
        tools:hint="display result here"/>

    <EditText
        android:id="@+id/et_subtract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/tv_result"
        android:textSize="32sp"
        android:hint="@string/value_to_subtract"
        android:gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_subtract"
        android:layout_centerHorizontal="true"
        android:text="@string/subtract"
        android:textSize="48sp"
        android:onClick="subtractClicked"
        />

</RelativeLayout>
